feat: update number series with references

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,20 +12,11 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
-    "types": [
-      "webpack-env"
-    ],
+    "types": ["webpack-env"],
     "paths": {
-      "@/*": [
-        "src/*"
-      ]
+      "@/*": ["src/*"]
     },
-    "lib": [
-      "esnext",
-      "dom",
-      "dom.iterable",
-      "scripthost"
-    ]
+    "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
   "include": [
     "src/**/*.ts",
@@ -38,11 +29,10 @@
     "frappe/**/*.ts",
     "models/**/*.ts",
     "patches/**/*.ts",
+    "patches/**/*.js",
     "reports/**/*.ts",
     "accounting/**/*.ts",
-    "accounting/**/*.ts",
+    "accounting/**/*.ts"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
