chore: change err_log_creds to log_creds - add telemetry url

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,9 +26,9 @@ jobs:
           ERR_LOG_URL: ${{ secrets.ERR_LOG_URL }}
           ERR_LOG_SECRET: ${{ secrets.ERR_LOG_SECRET }}
         run: |
-          echo $ERR_LOG_KEY > err_log_creds.txt
-          echo $ERR_LOG_SECRET >> err_log_creds.txt
-          echo $ERR_LOG_URL >> err_log_creds.txt
+          echo $ERR_LOG_KEY > log_creds.txt
+          echo $ERR_LOG_SECRET >> log_creds.txt
+          echo $ERR_LOG_URL >> log_creds.txt
 
       - name: Run build
         env:
@@ -71,9 +71,9 @@ jobs:
           ERR_LOG_URL: ${{ secrets.ERR_LOG_URL }}
           ERR_LOG_SECRET: ${{ secrets.ERR_LOG_SECRET }}
         run: |
-          echo $ERR_LOG_KEY > err_log_creds.txt
-          echo $ERR_LOG_SECRET >> err_log_creds.txt
-          echo $ERR_LOG_URL >> err_log_creds.txt
+          echo $ERR_LOG_KEY > log_creds.txt
+          echo $ERR_LOG_SECRET >> log_creds.txt
+          echo $ERR_LOG_URL >> log_creds.txt
 
       - name: Run build
         env:
@@ -113,9 +113,9 @@ jobs:
           ERR_LOG_URL: ${{ secrets.ERR_LOG_URL }}
           ERR_LOG_SECRET: ${{ secrets.ERR_LOG_SECRET }}
         run: |
-          echo $ERR_LOG_KEY > err_log_creds.txt
-          echo $ERR_LOG_SECRET >> err_log_creds.txt
-          echo $ERR_LOG_URL >> err_log_creds.txt
+          echo $ERR_LOG_KEY > log_creds.txt
+          echo $ERR_LOG_SECRET >> log_creds.txt
+          echo $ERR_LOG_URL >> log_creds.txt
 
       - name: Run build
         env:
