--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -3,8 +3,8 @@ appId: io.frappe.books
 afterSign: build/notarize.js
 extraResources: [
   { 
-    from: 'err_log_creds.txt',
-    to: '../creds/err_log_creds.txt',  
+    from: 'log_creds.txt',
+    to: '../creds/log_creds.txt',  
   }
 ]
 mac:
