--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,10 +25,12 @@ jobs:
           ERR_LOG_KEY: ${{ secrets.ERR_LOG_KEY }}
           ERR_LOG_URL: ${{ secrets.ERR_LOG_URL }}
           ERR_LOG_SECRET: ${{ secrets.ERR_LOG_SECRET }}
+          TELEMETRY_URL: ${{ secrets.TELEMETRY_URL }}
         run: |
           echo $ERR_LOG_KEY > log_creds.txt
           echo $ERR_LOG_SECRET >> log_creds.txt
           echo $ERR_LOG_URL >> log_creds.txt
+          echo $TELEMETRY_URL >> log_creds.txt
 
       - name: Run build
         env:
@@ -70,10 +72,12 @@ jobs:
           ERR_LOG_KEY: ${{ secrets.ERR_LOG_KEY }}
           ERR_LOG_URL: ${{ secrets.ERR_LOG_URL }}
           ERR_LOG_SECRET: ${{ secrets.ERR_LOG_SECRET }}
+          TELEMETRY_URL: ${{ secrets.TELEMETRY_URL }}
         run: |
           echo $ERR_LOG_KEY > log_creds.txt
           echo $ERR_LOG_SECRET >> log_creds.txt
           echo $ERR_LOG_URL >> log_creds.txt
+          echo $TELEMETRY_URL >> log_creds.txt
 
       - name: Run build
         env:
@@ -112,10 +116,12 @@ jobs:
           ERR_LOG_KEY: ${{ secrets.ERR_LOG_KEY }}
           ERR_LOG_URL: ${{ secrets.ERR_LOG_URL }}
           ERR_LOG_SECRET: ${{ secrets.ERR_LOG_SECRET }}
+          TELEMETRY_URL: ${{ secrets.TELEMETRY_URL }}
         run: |
           echo $ERR_LOG_KEY > log_creds.txt
           echo $ERR_LOG_SECRET >> log_creds.txt
           echo $ERR_LOG_URL >> log_creds.txt
+          echo $TELEMETRY_URL >> log_creds.txt
 
       - name: Run build
         env:
