--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "prettier": "^2.4.1",
     "raw-loader": "^4.0.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "typescript": "~4.1.5",
+    "typescript": "^4.6.2",
     "vue-cli-plugin-electron-builder": "^2.0.0",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^5.66.0"
