chore: add main to ∵ build failing

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "frappe-books",
   "version": "0.4.2-beta.0",
   "description": "Simple book-keeping app for everyone",
+  "main": "background.js",
   "author": {
     "name": "Frappe Technologies Pvt. Ltd.",
     "email": "hello@frappe.io"
