--- a/schemas/app/CompanySettings.json
+++ b/schemas/app/CompanySettings.json
@@ -4,24 +4,20 @@
   "naming": "autoincrement",
   "isSingle": true,
   "isChild": false,
-  "keywordFields": [
-    "companyName"
-  ],
   "fields": [
     {
       "fieldname": "companyName",
       "label": "Company Name",
       "fieldtype": "Data",
-      "disabled": false,
       "required": true
     },
     {
       "fieldname": "companyAddress",
       "label": "Company Address",
       "fieldtype": "Link",
-      "disabled": false,
       "required": true,
       "target": "Address"
     }
-  ]
+  ],
+  "keywordFields": ["companyName"]
 }
