--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
-    "script:translate": "node scripts/generateTranslations.js"
+    "script:translate": "node scripts/generateTranslations.js",
+    "test": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' mocha --reporter nyan --require ts-node/register ./**/tests/**/*.spec.ts"
   },
   "dependencies": {
     "@popperjs/core": "^2.10.2",
@@ -35,8 +36,11 @@
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/eslint-parser": "^7.16.0",
+    "@types/assert": "^1.5.6",
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/lodash": "^4.14.179",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "@vue/cli-plugin-babel": "^4.5.0",
@@ -56,10 +60,12 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0",
     "lint-staged": "^11.2.6",
+    "mocha": "^9.2.2",
     "postcss": "^8",
     "prettier": "^2.4.1",
     "raw-loader": "^4.0.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "ts-node": "^10.7.0",
     "tslib": "^2.3.1",
     "typescript": "^4.6.2",
     "vue-cli-plugin-electron-builder": "^2.0.0",
