--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -61,6 +61,9 @@ jobs:
         with:
           node-version: '16.13.1'
 
+      - name: Change yarn version
+        run: yarn set version 1.22.18
+
       - name: Checkout Books
         uses: actions/checkout@v2
 
@@ -104,6 +107,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '16.13.1'
+
+      - name: Change yarn version
+        run: yarn set version 1.22.18
 
       - name: Checkout Books
         uses: actions/checkout@v2
