incr: delete some stuff add typed doc.ts

--- a/schemas/app/PrintSettings.json
+++ b/schemas/app/PrintSettings.json
@@ -35,7 +35,8 @@
       "label": "Address",
       "fieldtype": "Link",
       "target": "Address",
-      "placeholder": "Click to create"
+      "placeholder": "Click to create",
+      "inline": true
     },
     {
       "fieldname": "template",
