--- a/package.json
+++ b/package.json
@@ -73,8 +73,7 @@
   },
   "engineStrict": true,
   "engines": {
-    "node": ">=16.13.1 <17",
-    "yarn": "1.22.18"
+    "node": ">=16.13.1 <17"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
