--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,9 @@
     },
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
+  "ts-node": {
+    "files": true
+  },
   "include": [
     "src/**/*.ts",
     "src/**/*.tsx",
@@ -37,7 +40,10 @@
     "patches/**/*.js",
     "reports/**/*.ts",
     "accounting/**/*.ts",
-    "accounting/**/*.ts"
+    "accounting/**/*.ts",
+
+    "scripts/**/*.ts",
+    "utils/csvParser.ts"
   ],
   "exclude": ["node_modules"]
 }
