refactor: simplify init flow - add README.md - move currency to systemsettings

--- a/schemas/core/SystemSettings.json
+++ b/schemas/core/SystemSettings.json
@@ -79,11 +79,19 @@
       "label": "Country Code",
       "fieldtype": "Data",
       "description": "Country code used to initialize regional settings."
+    },
+    {
+      "fieldname": "currency",
+      "label": "Currency",
+      "fieldtype": "Data",
+      "readOnly": true,
+      "required": false
     }
   ],
   "quickEditFields": [
     "locale",
     "dateFormat",
+    "currency",
     "displayPrecision",
     "hideGetStarted"
   ],
