incr: simplify doc a bit - allow nulls in converter else not not null'll fail

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,6 +46,7 @@
     "regional/**/*.ts",
     "reports/**/*.ts",
     "utils/**/*.ts",
+    "tests/**/*.ts",
   ],
   "exclude": ["node_modules"]
 }
