incr: add keyword fields, start with doc search

--- a/schemas/core/SystemSettings.json
+++ b/schemas/core/SystemSettings.json
@@ -90,12 +90,5 @@
       "required": true
     }
   ],
-  "quickEditFields": [
-    "locale",
-    "dateFormat",
-    "currency",
-    "displayPrecision",
-    "hideGetStarted"
-  ],
-  "keywordFields": []
+  "quickEditFields": ["locale", "dateFormat", "currency", "displayPrecision", "hideGetStarted"]
 }
