incr: add party and items dummy stuff

--- a/schemas/core/SystemSettings.json
+++ b/schemas/core/SystemSettings.json
@@ -87,6 +87,7 @@
       "fieldname": "currency",
       "label": "Currency",
       "fieldtype": "AutoComplete",
+      "default": "INR",
       "required": true
     },
     {
