--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,12 +1,11 @@
 productName: Frappe Books
 appId: io.frappe.books
 afterSign: build/notarize.js
-extraResources: [
-  { 
-    from: 'log_creds.txt',
-    to: '../creds/log_creds.txt',  
-  }
-]
+extraResources:
+  [
+    { from: 'log_creds.txt', to: '../creds/log_creds.txt' },
+    { from: 'translations', to: '../translations' },
+  ]
 mac:
   type: distribution
   category: public.app-category.finance
