chore: switch to better-sqlite3

--- a/package.json
+++ b/package.json
@@ -11,25 +11,26 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "postinstall": "electron-rebuild",
+    "postuninstall": "electron-rebuild",
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
-    "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps",
-    "script:translate": "ts-node -O '{\"module\":\"commonjs\"}' scripts/generateTranslations.ts",
-    "test": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' mocha --reporter nyan --require ts-node/register --require tsconfig-paths/register ./**/tests/**/*.spec.ts --exit"
+    "script:translate": "scripts/runner.sh scripts/generateTranslations.ts",
+    "script:profile": "scripts/profile.sh",
+    "test": "scripts/runner.sh ./node_modules/.bin/mocha ./**/tests/**/*.spec.ts --exit"
   },
   "dependencies": {
     "@popperjs/core": "^2.10.2",
+    "better-sqlite3": "^7.5.3",
     "core-js": "^3.19.0",
     "csvjson-csv2json": "^5.0.6",
     "electron-store": "^8.0.1",
     "feather-icons": "^4.28.0",
-    "knex": "^0.95.12",
+    "knex": "^2.0.0",
     "lodash": "^4.17.21",
     "luxon": "^2.0.2",
     "node-fetch": "2",
     "pesa": "^1.1.11",
-    "sqlite3": "npm:@vscode/sqlite3@^5.0.7",
     "vue": "^3.2.30",
     "vue-router": "^4.0.12"
   },
@@ -57,6 +58,7 @@
     "electron-builder": "^23.0.3",
     "electron-devtools-installer": "^3.2.0",
     "electron-notarize": "^1.1.1",
+    "electron-rebuild": "^3.2.7",
     "electron-updater": "^4.3.9",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
