incr: simplify telemetry - it's not opt-in anymore cause my job deps on it

--- a/schemas/core/SystemSettings.json
+++ b/schemas/core/SystemSettings.json
@@ -95,6 +95,12 @@
       "label": "Version",
       "fieldtype": "Data",
       "readOnly": true
+    },
+    {
+      "fieldname": "instanceId",
+      "label": "Instance Id",
+      "fieldtype": "Data",
+      "readOnly": true
     }
   ],
   "quickEditFields": [
