fix: rename discounting to discount accounting

--- a/schemas/app/AccountingSettings.json
+++ b/schemas/app/AccountingSettings.json
@@ -65,7 +65,7 @@
     },
     {
       "fieldname": "enableDiscounting",
-      "label": "Enable Discounting",
+      "label": "Enable Discount Accounting",
       "fieldtype": "Check",
       "default": false
     },
