--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
     "electron-builder": "^23.0.3",
     "electron-devtools-installer": "^3.2.0",
     "electron-notarize": "^1.1.1",
-    "electron-rebuild": "^3.2.7",
-    "electron-updater": "^4.3.9",
+    "electron-rebuild": "^3.2.9",
+    "electron-updater": "^5.2.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -74,8 +74,11 @@
     "tsconfig-paths": "^3.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.6.2",
-    "vue-cli-plugin-electron-builder": "^2.0.0",
+    "vue-cli-plugin-electron-builder": "https://github.com/nklayman/vue-cli-plugin-electron-builder#ebb9183f4913f927d4e4f4eb1fbab61a960f7a09",
     "webpack": "^5.66.0"
+  },
+  "resolutions": {
+    "electron-builder": "^23.3.3"
   },
   "prettier": {
     "semi": true,
