--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "electron:serve": "vue-cli-service electron:serve",
     "script:translate": "scripts/runner.sh scripts/generateTranslations.ts",
     "script:profile": "scripts/profile.sh",
-    "test": "scripts/runner.sh ./node_modules/.bin/mocha ./**/tests/**/*.spec.ts --exit",
-    "testtape": "scripts/runner.sh ./node_modules/.bin/tape ./tests/*.spec.ts | tap-spec"
+    "test": "scripts/runner.sh ./node_modules/.bin/tape ./**/tests/**/*.spec.ts | tap-spec"
   },
   "dependencies": {
     "@popperjs/core": "^2.10.2",
@@ -67,7 +66,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0",
     "lint-staged": "^11.2.6",
-    "mocha": "^9.2.2",
     "postcss": "^8",
     "prettier": "^2.4.1",
     "raw-loader": "^4.0.2",
