--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  setup_and_build:
+  setup_and_test:
     runs-on: macos-11
     steps:
       - name: Setup node
