--- a/schemas/app/inventory/InventorySettings.json
+++ b/schemas/app/inventory/InventorySettings.json
@@ -22,6 +22,13 @@
       "required": true
     },
     {
+      "fieldname": "defaultLocation",
+      "label": "Default Location",
+      "fieldtype": "Link",
+      "target": "Location",
+      "create": true
+    },
+    {
       "fieldname": "stockInHand",
       "label": "Stock In Hand Acc.",
       "fieldtype": "Link",
