fix(ux): minor ux fixes

--- a/schemas/app/inventory/InventorySettings.json
+++ b/schemas/app/inventory/InventorySettings.json
@@ -42,7 +42,7 @@
     },
     {
       "fieldname": "costOfGoodsSold",
-      "label": "Cost Of Goods Sold",
+      "label": "Cost Of Goods Sold Acc.",
       "fieldtype": "Link",
       "target": "Account"
     }
