--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frappe-books",
-  "version": "0.7.1",
+  "version": "0.8.0-beta.0",
   "description": "Simple book-keeping app for everyone",
   "main": "background.js",
   "author": {
