--- a/schemas/core/SystemSettings.json
+++ b/schemas/core/SystemSettings.json
@@ -36,6 +36,10 @@
         {
           "label": "Mar 23, 2022",
           "value": "MMM d, y"
+        },
+        {
+          "label": "23.03.2022",
+          "value": "dd.MM.yyyy"
         }
       ],
       "default": "MMM d, y",
@@ -49,6 +53,7 @@
       "fieldtype": "AutoComplete",
       "default": "en-IN",
       "required": true,
+      "allowCustom": true,
       "description": "Set the local code. This is used for number formatting."
     },
     {
