fix: save button disappears issue

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -29,7 +29,7 @@ win:
     - nsis
 nsis:
   oneClick: false
-  perMachine: true
+  perMachine: false
   allowToChangeInstallationDirectory: true
   installerIcon: build/installericon.ico
   uninstallerIcon: build/uninstallericon.ico
