--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "prettier": "^2.4.1",
     "raw-loader": "^4.0.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "tailwindcss-rtl": "^0.9.0",
     "tap-spec": "^5.0.0",
     "tape": "^5.6.1",
     "ts-node": "^10.7.0",
