feat: add enable barcode

--- a/schemas/app/inventory/InventorySettings.json
+++ b/schemas/app/inventory/InventorySettings.json
@@ -45,6 +45,11 @@
       "label": "Cost Of Goods Sold Acc.",
       "fieldtype": "Link",
       "target": "Account"
+    },
+    {
+      "fieldname": "enableBarcodes",
+      "label": "Enable Barcodes",
+      "fieldtype": "Check"
     }
   ]
 }
