--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
     "autoprefixer": "^9",
     "babel-loader": "^8.2.3",
     "dotenv": "^16.0.0",
-    "electron": "^18.3.7",
-    "electron-builder": "^23.0.3",
+    "electron": "18.3.7",
+    "electron-builder": "24.0.0-alpha.12",
     "electron-devtools-installer": "^3.2.0",
     "electron-notarize": "^1.1.1",
     "electron-rebuild": "^3.2.9",
@@ -81,7 +81,7 @@
     "webpack": "^5.66.0"
   },
   "resolutions": {
-    "electron-builder": "^23.3.3"
+    "electron-builder": "24.0.0-alpha.12"
   },
   "prettier": {
     "semi": true,
