chore: set notarize to false - cause external notarizer being used - remove projects from readme

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -11,6 +11,7 @@ mac:
   type: distribution
   category: public.app-category.finance
   icon: build/icon.icns
+  notarize: false
   hardenedRuntime: true
   gatekeeperAssess: false
   darkModeSupport: false
