fix: hide UOM conversion and batches behind flags - add enable uom conversions flag - add enable batches flag - remove batch no from table fields and move to quick edit

--- a/schemas/app/inventory/InventorySettings.json
+++ b/schemas/app/inventory/InventorySettings.json
@@ -50,6 +50,16 @@
       "fieldname": "enableBarcodes",
       "label": "Enable Barcodes",
       "fieldtype": "Check"
+    },
+    {
+      "fieldname": "enableBatches",
+      "label": "Enable Batches",
+      "fieldtype": "Check"
+    },
+    {
+      "fieldname": "enableUomConversions",
+      "label": "Enable UOM Conversion",
+      "fieldtype": "Check"
     }
   ]
 }
